[package]
name = "bidrum"
version = "0.1.0"
edition = "2021"
authors = ["Yeonjin Shin <litehell@litehell.info>"]
description = "Rhythm game with korean traditional drum(janggu)-like controller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
ffmpeg-next = "6.1.1"
kira = "0.8.6"
num-rational = "0.4.1"
sdl2 = { version = "0.36.0", features = ["image", "ttf", "mixer"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serialport = "4.3.0"
bidrum-data-struct-lib = { path = "../data-struct-lib" }
device_query = "1.1.3"
