[package]
name = "bidrum"
version = "0.1.0"
edition = "2021"
authors = ["Yeonjin Shin <litehell@litehell.info>"]
description = "Rhythm game with korean traditional drum(janggu)-like controller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
uncommercial = []

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
ffmpeg-next = "7.0.0"
kira = "0.8.6"
num-rational = "0.4.1"
sdl2 = { version = "0.36.0", features = ["image"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serialport = "4.3.0"
bidrum-data-struct-lib = { path = "../data-struct-lib" }
device_query = "2.0.0"
ezing = "0.2.1"
const_format = "0.2.32"
rand = "0.8"
cairo-rs = { version = "0.19.4", features = ["freetype"] }

[profile.dev.package.kira]
opt-level = 3

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-format-ogg]
opt-level = 3

[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3

[profile.dev.package.symphonia-bundle-flac]
opt-level = 3

[profile.dev.package.symphonia-format-wav]
opt-level = 3

[profile.dev.package.symphonia-codec-pcm]
opt-level = 3
